[project]
name = "omero-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Mateos Langerak",email = "julio.mateos-langerak@igh.cnrs.fr"}
]
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
